--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     --secondary-color: #8f94fb;
     --dark-color: #2a2d3e;
     --light-color: #f5f5f7;
-    --text-color: #333;
+    --text-color: #ff9292;
     --text-light: #666;
     --white: #fff;
     --black: #000;
@@ -225,7 +225,7 @@ header {
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    background: url('assets/profile.png') center/cover no-repeat;
+    background: url('assets/profile.webp') center/cover no-repeat;
     overflow: hidden;
     animation: animate 6s ease-in-out infinite;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.15);
